# manage_json

./: README.md  pyproject.toml  requirements.txt  version.py
docs/source/: conf.py  index.rst  installation.rst  json_management.rst  ujson_manager.rst
json_management/: __init__.py  json_management.py
manage_json/: __init__.py  manage_json.py
ujson_manager/: __init__.py  ujson_manager.py
