[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_management"
version = "0.0.2"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "unixtux"}
]
dependencies = [
    "aiotgm"
]

[project.urls]
Repository = "https://github.com/unixtux/json_management"

[tool.setuptools]
packages = ["json_management"]
