[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manage-json"
version = "0.0.5"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "geko1"}
]
dependencies = [
    "pro-telegram"
]

[project.urls]
Repository = "https://github.com/unixtux/manage-json"

[tool.setuptools]
packages = ["manage-json"]
