[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manage_json"
version = "0.0.9"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "geko1"}
]
dependencies = [
    "apitele"
]

[project.urls]
Repository = "https://github.com/unixtux/manage_json"

[tool.setuptools]
packages = ["manage_json"]
